Make sure to set different recaptcha key for about page

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag(reveal_emails_path, :id => 'captcha_form', :class => 'form-horizontal') do %>
-  <%= recaptcha_v3(action: 'contact', site_key: Settings.recaptcha_site_key_v3) %>
+  <%= recaptcha_v3(action: 'about', site_key: Settings.recaptcha_site_key_v3) %>
 
 <div id="about" class="col-sm-12 col-md-12">
 
