--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -203,6 +203,24 @@
       </td>
     </tr>
 
+    <tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
+            <%= image_tag("about/about_jay_l_colbert.jpg", class: 'hidden-xs', alt: "Photo of Jay Colbert") %>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              Jay L. Colbert
+            </h4>
+            <p>
+              Jay L. Colbert is the Metadata & Discovery Strategy Librarian at the University of New Hampshire. He holds a MSLIS from the University of Illinois at Urbana-Champaign, where he completed a thesis on patron-driven subject access and queer controlled vocabulary via a critical framework of queer theory and semiotics. His subsequent publications build on this research. Jay haunts New England with his bearded dragon Coop and his tuxedo cat King Arthur, constantly bugging them by dancing around his house being a shameless opera queen on main. Contact him at <%= hidden_email("jay.colbert@unh.edu", @reveal_emails) %>.</p>
+          </div>
+        </div>
+      </td>
+    </tr>
+
 
     </tbody>
   </table>
