--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,9 @@
         <% else %>
           <li><%= link_to "Search", search_results_v2_path %></li>
         <% end %>
+
+        <li><%= link_to "Releases", release_path %></li>
+
         <li><%= link_to "About", about_path %></li>
 
         <li><%= link_to "Contact", contact_path %></li>
