Add new 2.2 release text

--- a/app/views/homepage/release.html.erb
+++ b/app/views/homepage/release.html.erb
@@ -1,4 +1,86 @@
 <div id="about" class="col-sm-12 col-md-12">
+  <div class="release_title">
+    <h2>Homosaurus v. 2.2 Updates</h2>
+    <h3>Released December 2020</h3>
+  </div>
+
+  <div class="info_section">
+    <p>
+      <strong>List of new terms added, in brief:</strong>
+      <ol>
+        <li>
+          <%= link_to "Breast augmentation", "/v2/breastAugmentation" %>
+        </li>
+        <li>
+          <%= link_to "Breast fetishism", "/v2/breastFetishism" %>
+        </li>
+        <li>
+          <%= link_to "Breast reduction", "/v2/breastReduction" %>
+        </li>
+        <li>
+          <%= link_to "Clergy (LGBTQ)", "/v2/clergyLGBTQ" %>
+        </li>
+        <li>
+          <%= link_to "DADT relationships", "/v2/DADTRelationships" %>
+        </li>
+        <li>
+          <%= link_to "Graysexuality", "/v2/greysexuality" %>
+        </li>
+        <li>
+          <%= link_to "Greysexual People", "/v2/greysexualPeople" %>
+        </li>
+        <li>
+          <%= link_to "Hard swap", "/v2/hardSwap" %>
+        </li>
+        <li>
+          <%= link_to "Hierarchical nonmonogamy", "/v2/hierarchicalNonmonogamy" %>
+        </li>
+        <li>
+          <%= link_to "Large breasts", "/v2/largeBreasts" %>
+        </li>
+        <li>
+          <%= link_to "Mastectomy", "/v2/mastectomy" %>
+        </li>
+        <li>
+          <%= link_to "Megasexual people", "/v2/megasexualPeople" %>
+        </li>
+        <li>
+          <%= link_to "Megasexuality", "/v2/megasexuality" %>
+        </li>
+        <li>
+          <%= link_to "Partialism", "/v2/partialism" %>
+        </li>
+        <li>
+          <%= link_to "Primary partners", "/v2/primaryPartners" %>
+        </li>
+        <li>
+          <%= link_to "Relationship minorities", "/v2/relationshipMinorities" %>
+        </li>
+        <li>
+          <%= link_to "Relationship orientation", "/v2/relationshipOrientation" %>
+        </li>
+        <li>
+          <%= link_to "Secondary partners", "/v2/secondaryPartners" %>
+        </li>
+        <li>
+          <%= link_to "Small breasts", "/v2/smallBreasts" %>
+        </li>
+        <li>
+          <%= link_to "Soft swap", "/v2/softSwap" %>
+        </li>
+        <li>
+          <%= link_to "Swinging", "/v2/swinging" %>
+        </li>
+        <li>
+          <%= link_to "Trans men", "/v2/transMen" %>
+        </li>
+        <li>
+          <%= link_to "Trans women", "/v2/transWomen" %>
+        </li>
+      </ol>
+    </p>
+  </div>
+
 
   <div class="release_title">
     <h2>Homosaurus v. 2.1 Updates</h2>
