Update spelling of a term on the release page

--- a/app/views/homepage/release.html.erb
+++ b/app/views/homepage/release.html.erb
@@ -24,7 +24,7 @@
           <%= link_to "DADT relationships", "/v2/DADTRelationships" %>
         </li>
         <li>
-          <%= link_to "Graysexuality", "/v2/greysexuality" %>
+          <%= link_to "Greysexuality", "/v2/greysexuality" %>
         </li>
         <li>
           <%= link_to "Greysexual People", "/v2/greysexualPeople" %>
