Add 2.3 release notes

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -101,6 +101,45 @@
       </td>
     </tr>
 
+
+    <tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
+            <%= image_tag("about/about_jay_l_colbert.jpg", class: 'hidden-xs', alt: "Photo of Jay Colbert") %>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              Jay L. Colbert
+            </h4>
+            <p>
+              Jay L. Colbert is the Metadata & Discovery Strategy Librarian at the University of New Hampshire. He holds a MSLIS from the University of Illinois at Urbana-Champaign, where he completed a thesis on patron-driven subject access and queer controlled vocabulary via a critical framework of queer theory and semiotics. His subsequent publications build on this research. Jay haunts New England with his bearded dragon Coop and his tuxedo cat King Arthur, constantly bugging them by dancing around his house being a shameless opera queen on main. Contact him at <%= hidden_email("jay.colbert@unh.edu", @reveal_emails) %>.</p>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+
+    <tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
+            <%= image_tag("about/about_janaya_kizzie.jpg", class: 'hidden-xs', alt: "Photo of Janaya Kizzie") %>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              Janaya Kizzie
+            </h4>
+            <p>
+              Janaya Kizzie is an archivist, artist, and public humanitarian.  A graduate of Bard College (BA) and the University of Rhode Island (MLIS), Kizzie processed and developed archival infrastructures for the American Academy of Arts and Sciences in Cambridge, Massachusetts Citizens Bank, and Concord Free Public Library. Kizzie's work in historical collections has most recently included the processing of the AS220 Collection at Providence Public Library, the Rhode Island Arts and Culture Research Fellowship recording the recent history of Rhode Island Arts and Culture. In 2020, Kizzie was named Rhode Island Public Humanities Scholar by the Rhode Island Council for the Humanities. Currently Events Coordinator at Providence Public Library, Kizzie strives to redefine library standards and practices for community empowerment and engagement.
+            </p>
+          </div>
+        </div>
+      </td>
+    </tr>
+
     <tr>
       <td>&nbsp;</td>
       <td>
@@ -151,26 +190,7 @@
               K.J. Rawson
             </h4>
             <p>
-              K.J. Rawson (Co-Chair) is an Associate Professor of English at the College of the Holy Cross. He is also the founder and director of the <%= link_to "Digital Transgender Archive", "https://www.digitaltransgenderarchive.net", target: "_blank" %>, an online database and digital repository of transgender-related historical materials. His scholarship has appeared in Archivaria, Enculturation, Present Tense, QED, RSQ,TSQ, and several edited collections.
-            </p>
-          </div>
-        </div>
-      </td>
-    </tr>
-
-    <tr>
-      <td>&nbsp;</td>
-      <td>
-        <div class="media">
-          <div class="media-left">
-            <%= image_tag("about/about_jack_van_der_wel.jpg", class: 'hidden-xs') %>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">
-              Jack van der Wel
-            </h4>
-            <p>
-              Jack van der Wel (Co-Chair) is Head Collections and Cataloging at IHLIA LGBT Heritage in Amsterdam. He was one of the founders of Homodok in 1978, a predecessor of IHLIA. He presented the ongoing work on the Homosaurus on several LGBTQ ALMS Conferences since 2011. Contact Information: <%= hidden_email("jack@ihlia.nl", @reveal_emails) %>
+              K.J. Rawson is an Associate Professor of English and Women's, Gender, and Sexuality Studies at Northeastern University. He is also the founder and director of the <%= link_to "Digital Transgender Archive", "https://www.digitaltransgenderarchive.net", target: "_blank" %>, an award-winning online repository of trans-related historical materials, and he is the co-chair of the editorial board of the Homosaurus, an international LGBTQ linked data vocabulary. His work is at the intersections of the Digital Humanities and Rhetoric, LGBTQ+, and Feminist Studies. Focusing on archives as key sites of cultural power, Rawson studies the rhetorical work of queer and transgender archival collections in both brick-and-mortar and digital spaces. He has co-edited special issues of <em>Peitho</em> and <em>TSQ</em>> and he co-edited <em>Rhetorica in Motion: Feminist Rhetorical Methods and Methodologies</em> (University of Pittsburgh Press, 2010). Rawson’s scholarship has appeared in <em>Archivaria</em>, <em>Enculturation</em>, <em>Peitho</em>, <em>Present Tense</em>, <em>QED</em>, <em>RSQ</em>, <em>TSQ</em>, and several edited collections.
             </p>
           </div>
         </div>
@@ -195,24 +215,25 @@
         </div>
       </td>
     </tr>
+
     <tr>
       <td>&nbsp;</td>
       <td>
         <div class="media">
           <div class="media-left">
-            <%= image_tag("about/about_jay_l_colbert.jpg", class: 'hidden-xs', alt: "Photo of Jay Colbert") %>
+            <%= image_tag("about/about_jack_van_der_wel.jpg", class: 'hidden-xs') %>
           </div>
           <div class="media-body">
             <h4 class="media-heading">
-              Jay L. Colbert
+              Jack van der Wel
             </h4>
             <p>
-              Jay L. Colbert is the Metadata & Discovery Strategy Librarian at the University of New Hampshire. He holds a MSLIS from the University of Illinois at Urbana-Champaign, where he completed a thesis on patron-driven subject access and queer controlled vocabulary via a critical framework of queer theory and semiotics. His subsequent publications build on this research. Jay haunts New England with his bearded dragon Coop and his tuxedo cat King Arthur, constantly bugging them by dancing around his house being a shameless opera queen on main. Contact him at <%= hidden_email("jay.colbert@unh.edu", @reveal_emails) %>.</p>
+              Jack van der Wel (Co-Chair) is Head Collections and Cataloging at IHLIA LGBT Heritage in Amsterdam. He was one of the founders of Homodok in 1978, a predecessor of IHLIA. He presented the ongoing work on the Homosaurus on several LGBTQ ALMS Conferences since 2011. Contact Information: <%= hidden_email("jack@ihlia.nl", @reveal_emails) %>
+            </p>
           </div>
         </div>
       </td>
     </tr>
-
 
     </tbody>
   </table>
