--- a/app/views/homepage/release.html.erb
+++ b/app/views/homepage/release.html.erb
@@ -1,5 +1,252 @@
 <div id="about" class="col-sm-12 col-md-12">
   <div class="release_title">
+    <h2>Homosaurus v. 2.3 Updates</h2>
+    <h3>Released July 2021</h3>
+  </div>
+
+  <div class="info_section">
+    <p>
+      <strong>List of changes:</strong>
+      <ol>
+        <li>
+          "Culturally-specific gender identities" to
+          "<%= link_to "Non-Euro-American Gender and Sexual Identities", "/v2/nonEuroAmericanGenderAndSexualIdentities" %>"
+        </li>
+        <li>
+          "Assigned female" to
+          "<%= link_to "Assigned female at birth", "/v2/assignedFemaleAtBirth" %>"
+        </li>
+        <li>
+          "Assigned male" to
+          "<%= link_to "Assigned male at birth", "/v2/assignedMaleAtBirth" %>"
+        </li>
+      </ol>
+    <strong>List of terms removed:</strong>
+    <ol>
+      <li>
+        LGBTQ Cravings
+      </li>
+      <li>
+        Wommin
+      </li>
+    </ol>
+    <strong>List of new terms added, in brief:</strong>
+    <ol>
+      <li>
+        <%= link_to "Anchor partners", "/v2/anchorPartners" %>
+      </li>
+      <li>
+        <%= link_to "Assigned sex", "/v2/assignedSex" %>
+      </li>
+      <li>
+        <%= link_to "Assigned X at birth", "/v2/assignedXAtBirth" %>
+      </li>
+      <li>
+        <%= link_to "Cheating", "/v2/cheating" %>
+      </li>
+      <li>
+        <%= link_to "Compersion", "/v2/compersion" %>
+      </li>
+      <li>
+        <%= link_to "Compulsory monogamy", "/v2/compulsoryMonogamy" %>
+      </li>
+      <li>
+        <%= link_to "Consensual non-monogamy", "/v2/consensualNonMonogamy" %>
+      </li>
+      <li>
+        <%= link_to "Demigirls", "/v2/demigirls" %>
+      </li>
+      <li>
+        <%= link_to "Demiboys", "/v2/demiboys" %>
+      </li>
+      <li>
+        <%= link_to "Gym subculture", "/v2/gymSubculture" %>
+      </li>
+      <li>
+        <%= link_to "Honeymooning", "/v2/honeymooning" %>
+      </li>
+      <li>
+        <%= link_to "Monogamish", "/v2/monogamish" %>
+      </li>
+      <li>
+        <%= link_to "Nesting partners", "/v2/nestingPartners" %>
+      </li>
+      <li>
+        <%= link_to "Non-monogamous people", "/v2/nonMonogamousPeople" %>
+      </li>
+      <li>
+        <%= link_to "NRE (New Relationship Energy)", "/v2/nre" %>
+      </li>
+      <li>
+        <%= link_to "Paramours", "/v2/paramours" %>
+      </li>
+      <li>
+        <%= link_to "Polyamorous people", "/v2/polyamoroursPeople" %>
+      </li>
+      <li>
+        <%= link_to "Polyfidelity", "/v2/polyfidelity" %>
+      </li>
+      <li>
+        <%= link_to "Relationship anarchy", "/v2/relationshipAnarchy" %>
+      </li>
+      <li>
+        <%= link_to "Scissoring", "/v2/scissoring" %>
+      </li>
+      <li>
+        <%= link_to "Trangenderqueer people", "/v2/transgenderqueerPeople" %>
+      </li>
+      <li>
+        <%= link_to "Tribadism", "/v2/tribadism" %>
+      </li>
+      <li>
+        <%= link_to "Xenogender", "/v2/xenogender" %>
+      </li>
+      <li>
+        <%= link_to "Xenogender people", "/v2/xenogenderPeople" %>
+      </li>
+    </ol>
+    <strong>List of new pronouns-related terms:</strong>
+    <ol>
+      <li>
+        <%= link_to "Neopronouns", "/v2/neopronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ae (pronouns)", "/v2/aePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Co (pronouns)", "/v2/coPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Cy (pronouns)", "/v2/cyPronouns" %>
+      </li>
+      <li>
+        <%= link_to "E (pronouns)", "/v2/ePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ey (pronouns)", "/v2/eyPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Fe (pronouns)", "/v2/fePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Fae (pronouns)", "/v2/faePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Fey (pronouns)", "/v2/feyPronouns" %>
+      </li>
+      <li>
+        <%= link_to "He (pronouns)", "/v2/hePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Hu (pronouns)", "/v2/huPronouns" %>
+      </li>
+      <li>
+        <%= link_to "It (pronouns)", "/v2/itPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Jee (pronouns)", "/v2/jeePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Kit (pronouns)", "/v2/kitPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ne/nir (pronouns)", "/v2/neNirPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ne/nem (pronouns)", "/v2/neNemPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Peh (pronouns)", "/v2/pehPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Per (pronouns)", "/v2/perPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Sie (pronouns)", "/v2/siePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Se (pronouns)", "/v2/sePronouns" %>
+      </li>
+      <li>
+        <%= link_to "She (pronouns)", "/v2/shePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Shi (pronouns)", "/v2/shiPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Si (pronouns)", "/v2/siPronouns" %>
+      </li>
+      <li>
+        <%= link_to "They/them/themselves (pronouns)", "/v2/theyThemThemselvesPronouns" %>
+      </li>
+      <li>
+        <%= link_to "They/them/themself (pronouns)", "/v2/theyThemThemselfPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Thon (pronouns)", "/v2/thonPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ve/ver (pronouns)", "/v2/veVerPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ve/vem (pronouns)", "/v2/veVemPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Voi (pronouns)", "/v2/voiPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Vi/ver (pronouns)", "/v2/viVerPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Vi/vim (pronouns)", "/v2/viVimPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Xie (pronouns)", "/v2/xiePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Xe (pronouns)", "/v2/xePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Xey/xem/xeir (pronouns)", "/v2/xeXemXeirPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Xey/xem/xyr (pronouns)", "/v2/xeXemXyrPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Yo (pronouns)", "/v2/yoPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze (pronouns)", "/v2/zePronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/hir (pronouns)", "/v2/zeHirPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/zem (pronouns)", "/v2/zeZemPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/mer (pronouns)", "/v2/zeMerPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/zed (pronouns)", "/v2/zeZedPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/zir (pronouns)", "/v2/zeZirPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/zem (pronouns)", "/v2/zeZemPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Ze/hir (pronouns)", "/v2/zeHirPronouns" %>
+      </li>
+      <li>
+        <%= link_to "Zme (pronouns)", "/v2/zmePronouns" %>
+      </li>
+    </ol>
+    </p>
+  </div>
+
+  <div class="release_title">
     <h2>Homosaurus v. 2.2 Updates</h2>
     <h3>Released December 2020</h3>
   </div>
